# python-base

./: alerta.py  algoritmo.py  cadastro_de_produto.py  errors.py  escola_v1_com_listas.py  escola_v2_com_sets.py  escola_v3_com_dict.py  funcoes.py  hello.py  hello.txt  infixcalc.py  lambdas.py  logs.py  names.txt  notes.py  notes.txt  notes_prof.py  notes_prof.txt  numeros_pares.py  pyproject.toml  quartos.txt  repete.py  repete_com_while.py  repete_vogais.py  requirements.txt  reserva.py  reservas.txt  smtp.py  tabuada.py  tembug.py
