[tool.poetry]
name = "python_base"
version = "0.1.0"
description = "Curso de Python Base"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.4.0"
emoji = "^2.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
